--- a/public/styles.css
+++ b/public/styles.css
@@ -91,6 +91,14 @@ li {
         font-size: 40px;
     }
 }
+/************************ About **************************/
+#aboutMe {
+    float: left;
+}
+
+#daliaImg {
+    float: left;
+}
 
 /************************ Projects **************************/
 
